Ingress/ingress-service_kube.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress 
  namespace: default
spec:
  selector:
    app: nginx-ingress
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP 
    nodePort: 30080
  type: NodePort
status:
  loadBalancer: {}
